# FilesSearchEngine

./: .gitignore  CMakeLists.txt  README.md  answers.json  config.json  requests.json
etc/: config.json
etc/texts/: file0.txt  file10.txt  file101.txt  file102.txt  file103.txt  file104.txt  file11.txt  file110.txt  file111.txt  file114.txt  file115.txt  file116.txt  file118.txt  file119.txt  file123.txt  file125.txt  file129.txt  file130.txt  file132.txt  file134.txt  file136.txt  file137.txt  file139.txt  file140.txt  file141.txt  file142.txt  file143.txt  file144.txt  file145.txt  file146.txt  file147.txt  file148.txt  file154.txt  file155.txt  file156.txt  file159.txt  file160.txt  file164.txt  file167.txt  file168.txt  (+63 more)
include/: ConvertJSON.h  IConvertJSON.h  IInvertedIndex.h  ISearchEngine.h  InvertedIndex.h  SearchEngine.h
src/: CMakeLists.txt  ConvertJSON.cpp  InvertedIndex.cpp  SearchEngine.cpp  main.cpp
tests/: CMakeLists.txt  example_test.cpp  test_ConvertJSON.cpp  test_InvertedIndex.cpp  test_SearchEngine.cpp
texts/: file1.txt  file100.txt  file105.txt  file106.txt  file107.txt  file108.txt  file109.txt  file112.txt  file113.txt  file117.txt  file12.txt  file120.txt  file121.txt  file122.txt  file124.txt  file126.txt  file127.txt  file128.txt  file13.txt  file131.txt  file133.txt  file135.txt  file138.txt  file14.txt  file149.txt  file15.txt  file150.txt  file151.txt  file152.txt  file153.txt  file157.txt  file158.txt  file16.txt  file161.txt  file162.txt  file163.txt  file165.txt  file166.txt  file169.txt  file17.txt  (+57 more)
